@@ -1,0 +1,37 @@
+{
+"layers": [{
+		"orientation": "bottomleft",
+		"name": "background",
+		"tileset": "messageantifarea",
+		"sx": 1,
+		"sy": 81,
+		"width": 319,
+		"height": 78,
+		"dx": 25,
+		"dy": 50
+	},
+	{
+		"orientation": "topleft",
+		"name": "healthbase",
+		"tileset": "hp",
+		"sx": 6,
+		"sy": 28,
+		"width": 177,
+		"height": 20,
+		"dx": 10,
+		"dy": 5
+	},
+	{
+		"orientation": "topleft",
+		"name": "healthpoints",
+		"tileset": "hp",
+		"sx": 6,
+		"sy": 4,
+		"width": 177,
+		"height": 20,
+		"dx": 10,
+		"dy": 5,
+		"widthdepend": "ownhealth"
+	}]
+
+}
