@@ -125,6 +125,20 @@ function debugMove(message, counter){
 
 }
 
+/**
+ *Output a message to the echo div if the debugHudOn variable is true
+ *@param message {string} The string you want to show
+ *@param counter {bool}   Show how much time has passed since the last debugEcho
+ *                        (with counter enabled). Defaults to true.
+ */
+function debugHud(message, counter){
+    
+    if(counter === undefined || counter === true) counter = true;
+    
+    if(debugOn==true && debugHudOn == true) echo(message, counter);
+
+}
+
 
 /**
  *Output a message to the echo div, no matter what
